# tinydb

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  Feature.md  LICENSE  Phase3_Summary.md  Phase4_Summary.md  Phase5_Summary.md  README.md
.claude/: CLAUDE.md
client/: CMakeLists.txt  cli.cpp  main.cpp
client/include/: dbsdk.h
client/src/: client.cpp
docs/: BUILD.md  Phase4_Summary.md  README_cn.md  SQL_REFERENCE.md  code_storage.md  code_trans.md  design.md  protocol.md  storage_design.md  user_manual.md
src/: CMakeLists.txt  main.cpp
src/common/: error.cpp  error.h  logger.cpp  logger.h  string_utils.h  types.h
src/engine/: executor.cpp  executor.h  optimizer.cpp  optimizer.h  system_view_manager.cpp  system_view_manager.h
src/network/: connection.cpp  connection.h  protocol.cpp  protocol.h  server.cpp  server.h
src/server/: main.cpp
src/sql/: ast.cpp  ast.h  lexer.cpp  lexer.h  lexer.l  parser.cpp  parser.h  parser.y  parser_wrapper.cpp
src/sql/executor/: alter_table_executor.cpp  alter_table_executor.h  create_table_executor.cpp  create_table_executor.h  delete_executor.cpp  delete_executor.h  drop_table_executor.cpp  drop_table_executor.h  execution_result.h  executor.cpp  executor.h  executor_utils.cpp  executor_utils.h  index_executor.cpp  index_executor.h  insert_executor.cpp  insert_executor.h  select_executor.cpp  select_executor.h  transaction_executor.cpp  transaction_executor.h  update_executor.cpp  update_executor.h  view_executor.cpp  view_executor.h
src/sql/optimizer/: optimizer.cpp  optimizer.h
src/sql/parser/: ast.cpp  ast.h  lexer.cpp  parser.cpp  parser.h  parser.hpp  parser.y  parser_wrapper.cpp
src/sql/stmt/: alter_table_stmt.h  analyze_stmt.h  ast_node.h  begin_stmt.h  commit_stmt.h  create_index_stmt.h  create_table_stmt.h  create_view_stmt.h  delete_stmt.h  drop_index_stmt.h  drop_table_stmt.h  drop_view_stmt.h  explain_stmt.h  expression.h  insert_stmt.h  join_table.h  rollback_stmt.h  select_stmt.h  sql_parse_tree.h  statement.h  subquery_expr.h  system_view_manager.cpp  system_view_manager.h  update_stmt.h
src/storage/: CMakeLists.txt  backup_manager.cpp  backup_manager.h  btree_index.cpp  btree_index.h  buffer_pool.cpp  buffer_pool.h  diagnostics_manager.cpp  diagnostics_manager.h  disk_manager.cpp  disk_manager.h  import_export_manager.cpp  import_export_manager.h  index_manager.cpp  index_manager.h  lock_manager.cpp  lock_manager.h  page.cpp  page.h  permission_manager.cpp  permission_manager.h  replication_manager.cpp  replication_manager.h  statistics.cpp  statistics.h  storage_engine.cpp  storage_engine.h  table.cpp  table.h  transaction.cpp  transaction.h  tuple.cpp  tuple.h  wal.cpp  wal.h
tests/: CMakeLists.txt
tests/integration/: test_basic.cpp
tests/sql/: test-01-base.sql  test-02-advanced.sql  test-03-ddl.sql  test-04-dml.sql  test-05-meta.sql  test-06-transaction.sql  test-07-edge_cases.sql
tests/unit/: test_alter_table.cpp  test_btree_index.cpp  test_connection.cpp  test_create_table_types.cpp  test_executor.cpp  test_expression.cpp  test_index_ddl.cpp  test_join.cpp  test_lexer.cpp  test_lock_manager.cpp  test_optimizer.cpp  test_phase4_integration.cpp  test_phase5_integration.cpp  test_protocol.cpp  test_statistics.cpp  test_transaction.cpp  test_update_delete.cpp  test_wal.cpp
